# decent-sam-grc

./: .gitignore  launch.py  main.py  pyproject.toml  queue.sh  startup.sh
image-cifar/: generate_job.py  test.py
image-cifar/configs/bs/: 128.toml  256.toml  512.toml
image-cifar/configs/dataset/: cifar10.toml  cifar100.toml
image-cifar/configs/mix/: mix-1@10.toml  mix-2@10.toml  mix-3@10.toml  mix-4@10.toml  mix-5@10.toml  no_mix.toml
image-cifar/configs/mix/p/: p=1.toml  p=2.toml  p=3.toml  p=4.toml  p=5.toml
image-cifar/configs/mix/start/: s=10.toml  s=100.toml  s=130.toml  s=150.toml  s=160.toml  s=175.toml  s=40.toml  s=50.toml  s=70.toml
image-cifar/configs/model/: wrn16-8.toml  wrn28-10.toml
image-cifar/configs/seed/: seed2.toml
image-cifar/configs/topo/: complete.toml  exp.toml  ring.toml
image-cifar/jobs/: job_list_16_workers_697f9d19ba78.txt  job_list_32_workers_697f9d19ba78.txt  job_list_8_workers_99f75fea32a4.txt
image-cifar/src/: conf.py  data.py  decent_train.py  model.py  utils.py
scripts/: create_v4-8.sh  create_v6e-8.sh  delete_v4-8.sh  queue_create.sh  queue_delete.sh  queue_status.sh  ssh_v4-8.sh
