[project]
name = "decent-sam-grc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "datasets>=4.5.0",
    "loguru>=0.7.3",
    "pandas>=2.3.3",
    "pydantic>=2.12.5",
    "tensorboard>=2.20.0",
    "tensorboard-plugin-profile>=2.21.4",
    "tomli>=2.4.0",
    "tomli-w>=1.2.0",
    "torch>=2.9.1",
    "torch-xla[tpu]>=2.9.0",
    "torchvision>=0.24.1",
    "wandb>=0.24.0",
]
